# type_generator

./: .gitignore  Cargo.toml
examples/: basic_usage.rs  recursive.rs
src/: lib.rs
test_parsing/: test_parsing.fsproj
tests/: big_test.rs
