[package]
name = "type_gen"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1"}
schemars="*"
serde_json="1"
indexmap = "1.6.0"

[dev-dependencies]