[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "type_gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6.0"
schemars = "0.8.8"
serde = {version = "1"}
serde_json = "1"

[dev-dependencies]
